--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bottleneck": "^2.19.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "mysql2": "^2.2.5",
+    "node-nlp": "^4.27.0",
     "nodemailer": "6.6.3",
+    "openai": "^3.3.0",
+    "readline-sync": "^1.4.10",
     "sequelize": "^6.6.2",
     "uuid": "8.3.2"
   },
