--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "node-nlp": "^4.27.0",
     "nodemailer": "6.6.3",
     "openai": "^3.3.0",
+    "pg": "8.7.1",
+    "pg-hstore": "2.3.4",
     "readline-sync": "^1.4.10",
     "sequelize": "^6.6.2",
     "uuid": "8.3.2"
